# grocery_list

./: Cargo.toml  diesel.toml  docker-compose.yaml
migrations/2024-10-13-210809_create_users/: up.sql
migrations/2024-10-13-214253_groups/: up.sql
migrations/2024-10-14-181342_create_user_groups/: up.sql
migrations/2024-10-14-201110_create_products/: down.sql  up.sql
migrations/2024-10-14-202110_create_items/: up.sql
migrations/2024-10-22-184847_create_messages/: up.sql
migrations/2024-10-22-200101_create_group_messages/: down.sql  up.sql
migrations/2024-11-02-174041_create_join_group_requests/: down.sql  up.sql
src/: constants.rs  db.rs  http.rs  main.rs  messages.rs  schema.rs  state.rs  workers.rs
src/db/: models.rs
src/db/models/: chat_message.rs  group.rs  user.rs
src/http/: error.rs  handlers.rs  jwt.rs  models.rs
src/http/handlers/: group.rs  user.rs
src/http/models/: group.rs  user.rs
src/messages/: state.rs  websocket.rs  workers.rs
src/messages/websocket/: request.rs  response.rs
src/workers/: database_worker.rs  message_worker.rs
