[package]
name = "grocery_list"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"
futures-macro = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
chrono = {version="0.4.38", features=["serde"]}
validator = { version = "0.18", features = ["derive"] }
derive_more = {version ="1.0.0", features =["full"]}
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1", "with-serde_json-1","with-chrono-0_4"] }
deadpool-postgres = "0.8"
config = "0.11.0"
postgres-openssl = "0.3.0"
openssl = "0.10.35"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
bcrypt = "0.15.1"






